fixed the body white space on mobile view

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,16 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body{
 width: 100%;
 background-image:url("1.png");
-overflow-wrap: break-word;
+
 padding: 0;
 margin: 0;
 
@@ -224,20 +233,20 @@ footer{
 .justify{
 	margin-bottom: 6px;
 }
-@media (min-width: 320px) {
+@media (min-width: 318px) {
   .nav-tabs.nav-justified > li {
     display: table-cell;
     width: 1%;
   }
-  html {
 
-  overflow-x: hidden;
-
-}
-}
   .nav-tabs.nav-justified > li > a {
     margin-bottom: 0;
   }
+}
+   
+
+
+  
   .navbar-brand {
   	color:white;
   float: left;
@@ -246,7 +255,7 @@ footer{
   font-size: 18px;
   line-height: 20px;
 }
-}
+
 .fit{
 		margin-top: 75px;
 	}
